--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
           <p class="lead fs-3">Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto rounded-3" src="images/pestkajam.jpg" alt="">
+          <img class="featurette-image img-fluid mx-auto rounded-3" src="images/planetariumar.jpg" alt="">
         </div>
       </div>
   
