Added links to buttons

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container-fluid py-2">
           <h1 class="display-5 fw-bold">Ideas. Fun. Technology. </h1>
           <p class="col-md-8 fs-4 lead">We're a vibrant community of IT/CS enthusiasts driven by the thrill of innovation and the pursuit of knowledge. At Errno, we believe in fostering a culture where ideas flow freely, unencumbered by the fear of the unknown.</p>
-          <button class="btn btn-md btn-about" type="button">More about us</button>
+          <a href="about.html"><button class="btn btn-md btn-about" type="button">More about us</button></a>
         </div>
       </div>
       <div class="row align-items-md-stretch">
@@ -53,14 +53,14 @@
           <div class="h-100 p-5 bg-body-tertiary rounded-3">
             <h2 class="fw-bold fs-1">Join us</h2>
             <p class="fs-4 lead">Whether you're a seasoned coder or just dipping your toes into the vast ocean of technology, there's a place for you here. Join us on our journey as we push the boundaries of what's possible and redefine the future of tech, one idea at a time.</p>
-            <button class="btn btn-md btn-about" type="button">Get in touch</button>
+            <a href="contact.html"><button class="btn btn-md btn-about" type="button">Get in touch</button></a>
           </div>
         </div>
         <div class="col-md-6 mb-3">
           <div class="h-100 p-5 bg-body-tertiary rounded-3 gradient-color">
             <h2 class="fw-bold fs-1">What we've done</h2>
             <p class="fs-4 lead">Our journey has seen us dive into the captivating realms of the cutting-edge world of VR game development, and harness the power of AI. But here's the exciting part – we're only scratching the surface. With each project, we unearth new possibilities and push the boundaries of what's achievable.</p>
-            <button class="btn btn-about" type="button">See our projects</button>
+            <a href="projects.html"><button class="btn btn-about" type="button">See our projects</button></a>
           </div>
         </div>
 
@@ -78,7 +78,7 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex px-4">
-      <li class="ms-3"><a class="text-body-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-youtube" viewBox="0 0 16 16">
+      <li class="ms-3"><a class="text-body-primary" href="https://www.youtube.com/@errno404"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-youtube" viewBox="0 0 16 16">
         <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
       </svg></a></li>
       
