--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
           </svg></a>
           <h3 class="fs-1 fw-bold">Facebook</h3>
           <p>Sharing our plans and events and you can contact us via facebook if you have some questions or want to partner up with us or join our research group.</p>
-          <button class="btn btn-about" type="button">>>>></button>
+          <a href="https://www.facebook.com/Errno404"><button class="btn btn-about" type="button">>>>></button></a>
         </div>
         <div class="feature col bg-body-tertiary rounded-3 p-4 mb-2 mx-1 py-5">
           <a class="text-body-secondary" href="https://github.com/Studenckie-Kolo-Naukowe-ERRNO">
@@ -58,15 +58,15 @@
           </a>
           <h3 class="fs-1 fw-bold">Github</h3>
           <p>Check our projects and our progress on them and if maybe you think of something to be added to them or you can get inspired.</p>
-          <button class="btn btn-about" type="button">>>>></button>
+          <a href="https://github.com/Studenckie-Kolo-Naukowe-ERRNO"></a><button class="btn btn-about" type="button">>>>></button></a>
         </div>
         <div class="feature col bg-body-tertiary rounded-3 p-4 mx-1 mb-2 py-5">
-          <a class="text-body-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" fill="red" class="bi bi-youtube" viewBox="0 0 16 16">
+          <a class="text-body-primary" href="https://www.youtube.com/@errno404"><svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" fill="red" class="bi bi-youtube" viewBox="0 0 16 16">
             <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
           </svg></a>
           <h3 class="fs-1 fw-bold">Youtube</h3>
           <p>We will get started to post more on our youtube channel. We have few ideas we want to try out so subscribe and follow so you don't miss anything.</p>
-          <button class="btn btn-about" type="button">>>>></button>
+          <a href="https://www.youtube.com/@errno404"><button class="btn btn-about" type="button">>>>></button></a>
       </div>
     </div>
   
@@ -82,7 +82,7 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex px-4">
-      <li class="ms-3"><a class="text-body-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-youtube" viewBox="0 0 16 16">
+      <li class="ms-3"><a class="text-body-primary" href="https://www.youtube.com/@errno404"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-youtube" viewBox="0 0 16 16">
         <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
       </svg></a></li>
       
