--- a/index.html
+++ b/index.html
@@ -1,97 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Micro+5&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <title>Errno</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Errno Scientific Club</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html" style="padding-left: 1rem; padding-bottom: 0.5rem;">
-          <img id="logo" src="images/darkLogo.png" alt="Errno" style="height: 1rem;">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-  </nav>
-  
-  <main class="container-fluid">
-    <div class="container-fluid">
-      <div class="p-3 mb-4 bg-body-tertiary rounded-3 gradient-color">
-        <div class="container-fluid py-2">
-          <h1 class="display-5 fw-bold">Ideas. Fun. Technology. </h1>
-          <p class="col-md-8 fs-4 lead">We're a vibrant community of IT/CS enthusiasts driven by the thrill of innovation and the pursuit of knowledge. At Errno, we believe in fostering a culture where ideas flow freely, unencumbered by the fear of the unknown.</p>
-          <a href="about.html"><button class="btn btn-md btn-about" type="button">More about us</button></a>
-        </div>
-      </div>
-      <div class="row align-items-md-stretch">
-        <div class="col-md-6 mb-3">
-          <div class="h-100 p-5 bg-body-tertiary rounded-3">
-            <h2 class="fw-bold fs-1">Join us</h2>
-            <p class="fs-4 lead">Whether you're a seasoned coder or just dipping your toes into the vast ocean of technology, there's a place for you here. Join us on our journey as we push the boundaries of what's possible and redefine the future of tech, one idea at a time.</p>
-            <a href="contact.html"><button class="btn btn-md btn-about" type="button">Get in touch</button></a>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="h-100 p-5 bg-body-tertiary rounded-3 gradient-color">
-            <h2 class="fw-bold fs-1">What we've done</h2>
-            <p class="fs-4 lead">Our journey has seen us dive into the captivating realms of the cutting-edge world of VR game development, and harness the power of AI. But here's the exciting part – we're only scratching the surface. With each project, we unearth new possibilities and push the boundaries of what's achievable.</p>
-            <a href="projects.html"><button class="btn btn-about" type="button">See our projects</button></a>
-          </div>
-        </div>
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">Errno Computer Science Club</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a> </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<main class="main-content">
+
+  <div class="container hero-section text-center">
+    <h1 class="display-4">Welcome to Errno Computer Science Club!</h1>
+    <p class="lead">Exploring the world of computer science, one line of code at a time.</p>
+    <hr class="my-4">
+    <p>Join us to learn, collaborate, and innovate.</p>
+    <a class="btn btn-primary btn-lg" href="#about" role="button">Learn More</a>
+  </div>
+
+  <div class="container" id="about">
+    <div class="row">
+      <div class="col-md-8 offset-md-2 text-center">
+        <h2>About Us</h2>
+        <p class="lead">
+          The Errno Computer Science Club, based at the Faculty of Physics and Astronomy of Adam Mickiewicz University in Poznań, is dedicated to fostering a passion for computer science among students. We organize workshops, talks, and projects covering various IT disciplines. Our goal is to create a collaborative environment where members can explore their interests and develop their skills.
+        </p>
       </div>
     </div>
+  </div>
 
-  </main>
-
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-4 my-1 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="index.html" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" style="padding-left: 1rem;">
-        <img src="images/darkLogo.png" alt="Errno" style="height: 1rem;">
-      </a>
-      <span class="mb-3 mb-md-0 text-body-secondary">Student research group</span>
+  <div class="container my-5" id="contact">
+    <div class="row">
+      <div class="col-md-8 offset-md-2 text-center">
+        <h2>Contact Us</h2>
+        <p>Have questions? Get in touch!</p>
+        <p>Email: aluerrno@gmail.com</p>
+      </div>
     </div>
+  </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex px-4">
-      <li class="ms-3"><a class="text-body-primary" href="https://www.youtube.com/@errno404"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-youtube" viewBox="0 0 16 16">
-        <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
-      </svg></a></li>
-      
-      <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/Errno404"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
-        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-      </svg></a></li>
-      <li class="ms-3"><a class="text-body-secondary" href="https://github.com/Studenckie-Kolo-Naukowe-ERRNO">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-github" viewBox="0 0 16 16">
-          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
-        </svg>
-      </a></li>
-    </ul>
-  </footer>
+</main>
+<footer class="text-center">
+  <div class="container">
+    <p>&copy; 2025 Errno Computer Science Club. All Rights Reserved.</p>
+  </div>
+</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
