--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fade-in" style="animation-delay: 0.1s;">
   <div class="container">
     <a class="navbar-brand" href="#">Errno Computer Science Club</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,13 +38,13 @@
 
   <div class="container hero-section text-center">
     <h1 class="display-4">Welcome to Errno Computer Science Club!</h1>
-    <p class="lead">Exploring the world of computer science, one line of code at a time.</p>
-    <hr class="my-4">
-    <p>Join us to learn, collaborate, and innovate.</p>
-    <a class="btn btn-primary btn-lg" href="#about" role="button">Learn More</a>
+    <p class="lead fade-in-up" style="animation-delay: 3.3s;">Exploring the world of computer science, one line of code at a time.</p>
+    <hr class="my-4 fade-in" style="animation-delay: 3.6s;">
+    <p class="fade-in-up" style="animation-delay: 3.9s;">Join us to learn, collaborate, and innovate.</p>
+    <a class="btn btn-primary btn-lg scale-in" href="#about" role="button" style="animation-delay: 4.2s;">Learn More</a>
   </div>
 
-  <div class="container" id="about">
+  <div class="container fade-in-up" id="about" style="animation-delay: 4.7s;">
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
         <h2>About Us</h2>
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div class="container my-5" id="contact">
+  <div class="container my-5 fade-in-up" id="contact" style="animation-delay: 5s;">
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
         <h2>Contact Us</h2>
@@ -66,7 +66,7 @@
   </div>
 
 </main>
-<footer class="text-center">
+<footer class="text-center fade-in" style="animation-delay: 5.3s;">
   <div class="container">
     <p>&copy; 2025 Errno Computer Science Club. All Rights Reserved.</p>
   </div>
