Made navbar stick to the top, added padding

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
 <main class="main-content">
 
-  <div class="container hero-section text-center">
-    <h1 class="display-4">Welcome to Errno Computer Science Club!</h1>
+  <div class="hero-section"> <div class="container text-center"> <h1 class="display-4">Welcome to Errno Computer Science Club!</h1>
     <p class="lead fade-in-up" style="animation-delay: 3.3s;">Exploring the world of computer science, one line of code at a time.</p>
     <hr class="my-4 fade-in" style="animation-delay: 3.6s;">
     <p class="fade-in-up" style="animation-delay: 3.9s;">Join us to learn, collaborate, and innovate.</p>
     <a class="btn btn-primary btn-lg scale-in" href="#about" role="button" style="animation-delay: 4.2s;">Learn More</a>
+  </div>
   </div>
 
   <div class="container fade-in-up" id="about" style="animation-delay: 4.7s;">
