Updated mobile viewports

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fade-in" style="animation-delay: 0.1s;">
   <div class="container">
-    <a class="navbar-brand" href="#">Errno Computer Science Club</a>
+    <a class="navbar-brand" href="#">Errno Computer Technologies Club</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -36,12 +36,14 @@
 
 <main class="main-content">
 
-  <div class="hero-section"> <div class="container text-center"> <h1 class="display-4">Welcome to Errno Computer Science Club!</h1>
-    <p class="lead fade-in-up" style="animation-delay: 3.3s;">Exploring the world of computer science, one line of code at a time.</p>
-    <hr class="my-4 fade-in" style="animation-delay: 3.6s;">
-    <p class="fade-in-up" style="animation-delay: 3.9s;">Join us to learn, collaborate, and innovate.</p>
-    <a class="btn btn-primary btn-lg scale-in" href="#about" role="button" style="animation-delay: 4.2s;">Learn More</a>
-  </div>
+  <div class="hero-section">
+    <div class="container text-center">
+      <h1 class="display-4">Welcome to Errno Computer Technologies Club!</h1>
+      <p class="lead fade-in-up" style="animation-delay: 3.3s;">Exploring the world of computer technologies, one line of code at a time.</p>
+      <hr class="my-4 fade-in" style="animation-delay: 3.6s;">
+      <p class="fade-in-up" style="animation-delay: 3.9s;">Join us to learn, collaborate, and innovate.</p>
+      <a class="btn btn-primary btn-lg scale-in" href="#about" role="button" style="animation-delay: 4.2s;">Learn More</a>
+    </div>
   </div>
 
   <div class="container fade-in-up" id="about" style="animation-delay: 4.7s;">
@@ -49,7 +51,7 @@
       <div class="col-md-8 offset-md-2 text-center">
         <h2>About Us</h2>
         <p class="lead">
-          The Errno Computer Science Club, based at the Faculty of Physics and Astronomy of Adam Mickiewicz University in Poznań, is dedicated to fostering a passion for computer science among students. We organize workshops, talks, and projects covering various IT disciplines. Our goal is to create a collaborative environment where members can explore their interests and develop their skills.
+          The Errno Computer Technologies Club, based at the <a href="https://www.fizyka.amu.edu.pl/en" target="_blank">Faculty of Physics and Astronomy of Adam Mickiewicz University in Poznań</a>, is dedicated to fostering a passion for computer technologies among students. We organize workshops, talks, and projects covering various IT disciplines. Our goal is to create a collaborative environment where members can explore their interests and develop their skills.
         </p>
       </div>
     </div>
@@ -68,7 +70,7 @@
 </main>
 <footer class="text-center fade-in" style="animation-delay: 5.3s;">
   <div class="container">
-    <p>&copy; 2025 Errno Computer Science Club. All Rights Reserved.</p>
+    <p>&copy; 2025 Errno Computer Technologies Club. All Rights Reserved.</p>
   </div>
 </footer>
 
