--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fade-in" style="animation-delay: 0.1s;">
   <div class="container">
-    <a class="navbar-brand" href="#">Errno Computer Technologies Club</a>
+    <a class="navbar-brand" href="#">
+      <img src="images/short.png" alt="Errno Computer Technologies Club Logo" height="30"> Errno Computer Technologies Club
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
