--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>Errno Scientific Club</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
+
+  <link rel="icon" href="images/short.png" type="image/png">
 
 </head>
 <body>
@@ -16,7 +17,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fade-in" style="animation-delay: 0.1s;">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="images/short.png" alt="Errno Computer Technologies Club Logo" height="30"> Errno Computer Technologies Club
+      <img src="images/short.png" alt="Errno Computer Technologies Club Logo" height="30">
+      Errno Computer Technologies Club
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,6 +30,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a> </li>
@@ -59,21 +64,46 @@
     </div>
   </div>
 
-  <div class="container my-5 fade-in-up" id="contact" style="animation-delay: 5s;">
-    <div class="row">
-      <div class="col-md-8 offset-md-2 text-center">
-        <h2>Contact Us</h2>
-        <p>Have questions? Get in touch!</p>
-        <p>Email: aluerrno@gmail.com</p>
+  <div class="project-showcase fade-in-up" id="projects" style="animation-delay: 5.2s;"> <div class="container">
+    <div class="row text-center mb-4">
+      <div class="col-12">
+        <h2>Our Projects</h2>
       </div>
     </div>
+    <div class="row">
+
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h3>SNS MINERWA</h3>
+        <p>Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+      </div>
+
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h3>LAB VR</h3>
+        <p>It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways!</p>
+      </div>
+
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h3>PLANETARIUM AR</h3>
+        <p>Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
+      </div>
+
+    </div>
+  </div>
+  </div>
+
+  <div class="container my-5 fade-in-up" id="contact" style="animation-delay: 5.7s;"> <div class="row">
+    <div class="col-md-8 offset-md-2 text-center">
+      <h2>Contact Us</h2>
+      <p>Have questions? Get in touch!</p>
+      <p>Email: aluerrno@gmail.com</p>
+    </div>
+  </div>
   </div>
 
 </main>
-<footer class="text-center fade-in" style="animation-delay: 5.3s;">
-  <div class="container">
-    <p>&copy; 2025 Errno Computer Technologies Club. All Rights Reserved.</p>
-  </div>
+<footer class="text-center fade-in" style="animation-delay: 6s;"> <div class="container">
+  <p>&copy; 2025 Errno Computer Technologies Club. All Rights Reserved.</p>
+</div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
