--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#leadership">Leadership</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
@@ -64,46 +67,85 @@
     </div>
   </div>
 
-  <div class="project-showcase fade-in-up" id="projects" style="animation-delay: 5.2s;"> <div class="container">
-    <div class="row text-center mb-4">
-      <div class="col-12">
-        <h2>Our Projects</h2>
+  <div class="leadership fade-in-up" id="leadership" style="animation-delay: 5.0s;">
+    <div class="container">
+      <div class="row text-center mb-4">
+        <div class="col-12">
+          <h2>Leadership</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+
+        <div class="col-md-4 col-sm-6 mb-4">
+          <img src="path/to/member1.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <h4>Eryk Piasecki</h4>
+          <p>President</p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 mb-4">
+          <img src="path/to/member2.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <h4>Miłosz Klim</h4>
+          <p>Vice President</p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 mb-4">
+          <img src="path/to/member3.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <h4>Varvara Vonsovych</h4>
+          <p>Vice President</p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 mb-4">
+          <img src="path/to/member4.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <h4>Wiktoria Bielecka</h4>
+          <p>Public Relations Officer</p> </div>
+
       </div>
     </div>
+  </div>
+
+  <div class="project-showcase fade-in-up" id="projects" style="animation-delay: 5.5s;">
+    <div class="container">
+      <div class="row text-center mb-4">
+        <div class="col-12">
+          <h2>Our Projects</h2>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h3>SNS MINERWA</h3>
+          <p>Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h3>LAB VR</h3>
+          <p>It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways!</p>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h3>PLANETARIUM AR</h3>
+          <p>Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container my-5 fade-in-up" id="contact" style="animation-delay: 6.0s;">
     <div class="row">
-
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h3>SNS MINERWA</h3>
-        <p>Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+      <div class="col-md-8 offset-md-2 text-center">
+        <h2>Contact Us</h2>
+        <p>Have questions? Get in touch!</p>
+        <p>Email: aluerrno@gmail.com</p>
       </div>
-
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h3>LAB VR</h3>
-        <p>It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways!</p>
-      </div>
-
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h3>PLANETARIUM AR</h3>
-        <p>Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
-      </div>
-
     </div>
-  </div>
-  </div>
-
-  <div class="container my-5 fade-in-up" id="contact" style="animation-delay: 5.7s;"> <div class="row">
-    <div class="col-md-8 offset-md-2 text-center">
-      <h2>Contact Us</h2>
-      <p>Have questions? Get in touch!</p>
-      <p>Email: aluerrno@gmail.com</p>
-    </div>
-  </div>
   </div>
 
 </main>
-<footer class="text-center fade-in" style="animation-delay: 6s;"> <div class="container">
-  <p>&copy; 2025 Errno Computer Technologies Club. All Rights Reserved.</p>
-</div>
+<footer class="text-center fade-in" style="animation-delay: 6.3s;">
+  <div class="container">
+    <p>&copy; 2025 Errno Computer Technologies Club. All Rights Reserved.</p>
+  </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
